last styling done

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <!-- CONTAINER -->
     <div class="container">
 
-        
+
         <div class="sidebar-box">
-            <div class="outer-wrapper">
+            <div class="outer-wrapper-sidebar">
                 <!-- DESCRIPTION BOX -->
                 <aside class="description">
                     <div class="description-image">
@@ -55,7 +55,7 @@
                 <!-- WIPS BOXES-->
 
                 <!-- WIP #01 -->
-                <aside class="wip-box">
+                <aside class="wip-box move">
                     <div class="wip-img-box">
                         <img src="images/wip-image.png" alt="wip image" class="wip-img">
                     </div>
